<resources>
    <string name="champ_cie"><b>CHAMPS</b><font color='#FFFFFF' size='18' fontFamily='League'>&amp;CIE</font></string>
    <string name="search_hint">Search...</string>
    <string name="roles"><strong>Roles</strong></string>
    <string name="sort"><strong>Tri par ordre</strong></string>
    <string name="kinds"><strong>Types</strong></string>
    <string name="close_popup_description">Fermer le filtre d\'ordre</string>
</resources>